<resources xmlns:tools="http://schemas.android.com/tools">
    <!--<string name="app_name">Panda</string>-->

    <string name="title_activity_image_filter">필터</string>
    <string name="title_activity_shop">거래관리</string>
    <string name="title_activity_image_detail">사진보기</string>
    <string name="title_activity_chat_room">메시지</string>
    <string name="title_activity_article">사진</string>
    <string name="title_activity_profile_edit">프로필 편집</string>

    <!-- Common -->
    <string name="next">다음</string>

    <!--exit notification-->
    <string name="msg_press_again_to_exit_app">뒤로가기 버튼을 한번 더 누르면 앱이 종료됩니다.</string>
    <string name="action_settings">Settings</string>
    <string name="activity_select_friend">Select Friend</string>

    <string name="about_text">This is Material Design Social App template, this app use dummy data not related for any backend
    \n\nImage source :
        \n<a href="www.pexels.com">www.pexels.com</a>
        \n<a href="www.pixabay.com">www.pixabay.com</a>
    </string>

    <string name="my_name">evergreen</string>

    <string name="tab_feed">Feeds</string>
    <string name="tab_friend">Friends</string>
    <string name="tab_message">Messages</string>
    <string name="tab_notif">Notifications</string>
    <string name="tab_profile">Profile</string>
    <string name="avatar_source">http://www.designskilz.com/</string>

    <!-- Notification -->
    <string name="label_notification_like">%1$s님이 회원님의 사진을 좋아합니다.</string>
    <string name="label_notification_comment">%1$s님이 댓글을 남겼습니다. \"%2$s\"</string>
    <string name="label_notification_follow">%1$s님이 회원님을 팔로우하기 시작했습니다.</string>
    <string name="label_notification_trade">%1$s님이 회원님의 재능을 구매 신청했습니다.</string>

    <!-- AuthActivity -->
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="msg_sign_in_successed">로그인에 성공하었습니다.</string>
    <string name="msg_sign_in_cancelled">로그인이 취소되었습니다.</string>
    <string name="msg_no_internet_connection">네트워크에 연결할 수 없습니다.</string>
    <string name="msg_unknown_sign_in_response">인증과정에서 알 수 없는 응답이 수신되었습니다.</string>
    <string name="msg_unknown_response">예상하지 못한 액티비티 결과 코드가 수신되었습니다.</string>
    <string name="msg_sign_out_successed">로그아웃에 성공하였습니다.</string>
    <string name="msg_sign_out_failed">로그아웃에 실패했습니다.</string>

    <string name="button_login_email">이메일로 로그인</string>
    <string name="button_login_facebook">페이스북으로 로그인</string>
    <string name="button_login_kakao">카카오톡으로 로그인</string>
    <string name="button_login_naver">네이버로 로그인</string>

    <string name="button_find_account">이메일이나 비밀번호를 잊으셨나요?</string>
    <string name="label_find_account">이메일이나 비밀번호를 잊으셨나요?</string>
    <string name="label_signup">계정이 없으신가요?</string>
    <string name="button_signup">가입하기</string>

    <string name="hint_login_identifier">아이디나 이메일 주소</string>
    <string name="hint_forgot_account_identifier">아이디나 이메일 주소</string>
    <string name="hint_login_password">비밀번호</string>

    <string name="action_sign_in_short">로그인</string>
    <string name="msg_invalid_password">패스워드는 6자리 이상의 값으로 입력해주세요.</string>
    <string name="msg_invalid_email">올바른 이메일 형식이 아닙니다.</string>
    <string name="msg_identifier_field_required">아이디나 이메일 주소를 입력해주세요.</string>
    <string name="msg_email_field_required">이메일을 입력해주세요.</string>
    <string name="msg_password_field_required">비밀번호를 입력해주세요.</string>
    <string name="msg_field_required">아무런 값을 입력하지 않았습니다.</string>
    <string name="msg_no_network">네트워크를 사용할 수 있습니다. 인터넷 연결을 확인해주세요.</string>
    <string name="msg_wrong_password">패스워드가 일치하지 않습니다.</string>
    <string name="msg_email_not_exists">해당 이메일로 등록된 계정이 없습니다.</string>
    <string name="msg_email_already_exists">이미 가입된 이메일 주소입니다.</string>

    <string name="msg_failed_facebook_sign_in">페이스북 로그인에 실패하였습니다. 문제가 지속될 경우 pandazmaker@gmail.com로 문의주시기 바랍니다.</string>
    <string name="msg_failed_kakao_sign_in">카카오 로그인에 실패하였습니다. 문제가 지속될 경우 pandazmaker@gmail.com로 문의주시기 바랍니다.</string>
    <string name="msg_failed_naver_sign_in">네이버 로그인에 실패하였습니다. 문제가 지속될 경우 pandazmaker@gmail.com로 문의주시기 바랍니다.</string>

    <!-- 권한 -->
    <string name="rationale_storage_perm">내부 저장소의 권한이 필요합니다.</string>
    <string name="msg_no_auth_information">로그인 세션이 만료되었습니다. 다시 로그인 해주세요.</string>
    <string name="start_chatting">No messages. Start chatting at the bottom!</string>
    <string name="send">전송</string>
    <string name="anonymous">(알 수 없음)</string>
    <string name="format_chat_room_time">aa hh:mm</string>
    <string name="format_chat_date_caption">yyyy년 M월 d일 EEEE</string>
    <string name="title_menu_action_new_room">새 메시지</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="toast_cannot_retrieve_cropped_image">크롭된 이미지를 처리하는데 오류가 발생했습니다. 다시 시도해주세요.</string>

    <string name="text_filter_normal">원본</string>
    <string name="text_filter_in1977">1977</string>
    <string name="text_filter_amaro">Amaro</string>
    <string name="text_filter_brannan">Brannan</string>
    <string name="text_filter_early_bird">Earlybird</string>
    <string name="text_filter_hefe">Hefe</string>
    <string name="text_filter_hudson">Hudson</string>
    <string name="text_filter_inkwell">Inkwell</string>
    <string name="text_filter_lomofi">Lomo</string>
    <string name="text_filter_lord_kelvin">LordKelvin</string>
    <string name="text_filter_nashville">Nashville</string>
    <string name="text_filter_rise">Rise</string>
    <string name="text_filter_sierra">Sierra</string>
    <string name="text_filter_sutro">Sutro</string>
    <string name="text_filter_toaster">Toaster</string>
    <string name="text_filter_valencia">Valencia</string>
    <string name="text_filter_walden">Walden</string>
    <string name="text_filter_xproii">Xproll</string>

    <!-- FishBun -->
    <string name="fishbun_all_view_title">전체보기</string>
    <string name="fishbun_nothing_selected">이미지를 하나 이상 선택해주세요.</string>
    <string name="fishbun_limit_reached">선택가능개수를 모두 선택하셨습니다.</string>
    <string name="fishbun_action_bar_title">앨범</string>

    <!-- uCrop -->
    <string name="ucrop_toolbar_title">자르기</string>
    <string name="ucrop_menu_cancel" tools:override="true">이전</string>
    <string name="ucrop_menu_crop" tools:override="true">다음</string>
    <string name="action_complete">완료</string>
    <string name="actioin_back">이전</string>

    <string name="popup_menu_action_report">신고</string>
    <string name="popup_menu_action_message">메시지 보내기</string>
    <string name="popup_menu_action_delete">삭제</string>
    <string name="popup_menu_action_modify">수정</string>
    <string name="msg_article_is_not_exists">해당 글이 존재하지 않습니다.</string>
    <string name="msg_failed_to_upload_article">글 등록에 실패하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="msg_failed_to_upload_comment">댓글 등록에 실패하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="show_all_comments">댓글 %1$d개 보기</string>

    <string name="bottom_sheet_item_delete_profile_image">프로필 사진 삭제</string>
    <string name="bottom_sheet_item_change_profile_image">새 프로필 사진</string>
    <string name="util_format_just_now">조금 전</string>
    <string name="util_format_a_minute_ago">1분 전</string>
    <string name="util_format_n_minutes_ago">%1$d분 전</string>
    <string name="util_format_a_hour_ago">1시간 전</string>
    <string name="util_format_n_hours_ago">%1$d시간 전</string>
    <string name="util_format_yesterday">어제</string>
    <string name="util_format_n_days_ago">%1$d일 전</string>
    <string name="util_format_a_week_ago">1주일 전</string>
    <string name="util_format_n_weeks_ago">%1$d주 전</string>
    <string name="button_send_reset_link">비밀번호 재설정 이메일 보내기</string>
    <string name="label_find_account_detail">아이디나 이메일을 입력하시면 가입된 \n이메일로 비밀번호 재설정 링크를 보내드립니다.</string>
    <string name="delete">삭제</string>
    <string name="msg_error_failed_delete_comment">일시적인 오류로 댓글을 삭제하지 못했습니다 잠시 후 다시 시도해주세요.</string>
    <string name="msg_error_failed_delete_notification">일시적인 오류로 알림을 삭제하지 못했습니다 잠시 후 다시 시도해주세요.</string>
    <string name="search">검색</string>
    <string name="cancel">취소</string>

    <string name="label_search_result">\'%1$s\'(으)로 %2$d개의 게시물을 찾았습니다.</string>
    <string name="msg_invalid_description_exceed_length">프로필 설명은 1000자 이하로 작성해주세요.</string>
    <string name="msg_nickname_field_required">사용자 이름을 입력해주세요.</string>
    <string name="msg_invalid_nickname">사용자 이름은 영어, 숫자, 밑줄만 사용할 수 있습니다.</string>
    <string name="msg_invalid_nickname_duplication">이미 존재하는 사용자 이름입니다. 다른 이름을 사용해주세요.</string>
    <string name="title_activity_main">MainActivity</string>

    <!--<string name="title_home">Home</string>-->
    <!--<string name="title_dashboard">Dashboard</string>-->
    <!--<string name="title_notifications">Notifications</string>-->
</resources>
